# tm_security_app

./: .env  .env.example  .gitignore  .replit  Pasted--Restarting-with-stat-Debugger-is-active-Debugger-PIN-107-246-767-2593-wsgi-starting-u-1729153027121.txt  Pasted-Error-fetching-data-ReferenceError-at-t-value-https-07346fbb-7271-481a-8a26-9d9e24d426f2-1733910728477.txt  Pasted-ProgrammingError-sqlalchemy-exc-ProgrammingError-psycopg2-errors-UndefinedColumn-column-inciden-1733907554594.txt  Pasted-ProgrammingError-sqlalchemy-exc-ProgrammingError-psycopg2-errors-UndefinedColumn-column-inciden-1733908083683.txt  Pasted-Through-a-mobile-app-users-will-be-able-to-register-by-entering-an-email-and-password-or-with-thei-1728897199586.txt  Procfile  Proyecto App Transmilenio Insecurity Identifier.docx  README.md  app.py  app.tsx  check_users.py  config.py  cookies.txt  create_test_user.py  database.py  diagnose_sequence.py  export_data.py  extensions.py  fix_column_names.py  fix_sequence.py  forms.py  generate_sample_data.py  generate_station_icon.py  import_data.py  incident_utils.py  init_database.py  login.html  main.py  ml_models.py  models.py  package-lock.json  package.json  predictions_cache.json  pyproject.toml  replit.nix  requirements.txt  (+8 more)
attached_assets/: Pasted--extends-base-html-block-content-div-class-container-fluid-statistics-container-p-1737914197114.txt  Pasted--warnings-warn-smsg-UserWarning-INFO-root-Model-Accuracy-0-13875598086124402-INFO-root-ROC-AUC--1740195531760.txt  Pasted--workspace-cd-frontend-npm-install-npm-run-build-added-137-packages-and-audited-138-pack-1737870469659.txt  Pasted--workspace-cd-frontend-npm-run-build-frontend-0-0-0-build-tsc-vite-build-Version--1737870552141.txt  Pasted--workspace-cd-frontend-npm-run-build-frontend-0-0-0-build-tsc-vite-build-src-comp-1737882375191.txt  Pasted-2025-02-22-05-27-07-716261-I-tensorflow-tsl-cuda-cudart-stub-cc-28-Could-not-find-cuda-drivers-on--1740202072528.txt  Pasted-2025-02-22-08-49-21-396703-I-tensorflow-tsl-cuda-cudart-stub-cc-28-Could-not-find-cuda-drivers-on--1740214207722.txt  Pasted-2025-02-22-08-52-09-147222-I-tensorflow-tsl-cuda-cudart-stub-cc-28-Could-not-find-cuda-drivers-on--1740214366890.txt  Pasted-2025-02-22-09-08-05-175348-I-tensorflow-tsl-cuda-cudart-stub-cc-28-Could-not-find-cuda-drivers-on--1740215415476.txt  Pasted-2025-03-15-20-01-58-889-main-INFO-Verificando-variables-de-entorno-2025-03-15-20-01-58-1742068968362.txt  Pasted-Aqu-tienes-la-informaci-n-detallada-de-las-estaciones-m-s-inseguras-de-TransMilenio-incluyendo-las-1737842330127.txt  Pasted-Datos-de-estaciones-recibidos-149--1739945888535.txt  (+24 more)
(+55 files in other folders)
