[project]
name = "repl-nix-transmileniosafetyapp"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "email-validator>=2.2.0",
    "flask==3.0.2",
    "flask-sqlalchemy>=3.1.1",
    "psycopg2-binary>=2.9.9",
    "flask-login>=0.6.3",
    "flask-wtf>=1.2.1",
    "pandas==2.2.3",
    "numpy==1.26.0",
    "scikit-learn==1.4.1.post1",
    "xgboost==2.0.3",
    "lightgbm>=4.5.0",
    "flask-socketio==5.3.6",
    "requests>=2.32.3",
    "pillow>=11.0.0",
    "sqlalchemy>=2.0.35",
    "werkzeug>=3.0.4",
    "wtforms>=3.1.2",
    "tensorflow==2.15.0",
    "schedule>=1.2.2",
    "cachetools>=5.5.1",
    "pytz>=2024.2",
    "flask-caching>=2.3.0",
    "gevent==23.9.1",
    "gevent-websocket==0.10.1",
    "imbalanced-learn>=0.13.0",
    "pywebpush>=1.14.3",
    "imblearn>=0.0",
    "flask-cors>=5.0.1",
]
